поправил тень у элемента фильтр на странице каталога

--- a/02_HTML_CSS/01_DZ/catalog.html
+++ b/02_HTML_CSS/01_DZ/catalog.html
@@ -100,77 +100,79 @@
     </div>
 
     <div class="filter center">
-        <details class="filter_details">
-            <summary class="filter_summary">
-                <span class="filter_summary_heading">filter
-                </span>
-                <svg width="15.000000" height="10.000000" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <desc>
-                            Created with Pixso.
-                    </desc>
-                    <defs/>
-                    <path id="Vector" d="M0.833252 10L4.16675 10C4.625 10 5 9.625 5 9.16675C5 8.70825 4.625 8.33325 4.16675 8.33325L0.833252 8.33325C0.375 8.33325 0 8.70825 0 9.16675C0 9.625 0.375 10 0.833252 10ZM0 0.833252C0 1.29175 0.375 1.66675 0.833252 1.66675L14.1667 1.66675C14.625 1.66675 15 1.29175 15 0.833252C15 0.375 14.625 0 14.1667 0L0.833252 0C0.375 0 0 0.375 0 0.833252ZM0.833252 5.83325L9.16675 5.83325C9.625 5.83325 10 5.45825 10 5C10 4.54175 9.625 4.16675 9.16675 4.16675L0.833252 4.16675C0.375 4.16675 0 4.54175 0 5C0 5.45825 0.375 5.83325 0.833252 5.83325Z" fill="#000000" fill-opacity="1.000000" fill-rule="nonzero"/>
-                </svg>
-            </summary>
-            <div class="filter_details_groups">
-                <details class="filter_details_group" open>
-                    <summary class="filter_details_group_summary">
-                        category
-                    </summary>
-                    <div class="filter_details_group_links">
-                        <a href="#" class="filter_details_group_link">Accessories</a>
-                        <a href="#" class="filter_details_group_link">Bags</a>
-                        <a href="#" class="filter_details_group_link">Denim</a>
-                        <a href="#" class="filter_details_group_link">Hoodies & Sweatshirts</a>
-                        <a href="#" class="filter_details_group_link">Jackets & Coats</a>
-                        <a href="#" class="filter_details_group_link">Polos</a>
-                        <a href="#" class="filter_details_group_link">Shirts</a>
-                        <a href="#" class="filter_details_group_link">Shoes</a>
-                        <a href="#" class="filter_details_group_link">Sweaters & Knits</a>
-                        <a href="#" class="filter_details_group_link">T-Shirts</a>
-                        <a href="#" class="filter_details_group_link">Tanks</a>
-                    </div>
-                </details>
-                <details class="filter_details_group">
-                    <summary class="filter_details_group_summary">
-                        brand
-                    </summary>
-                    <div class="filter_details_group_links">
-                        <a href="#" class="filter_details_group_link">Accessories</a>
-                        <a href="#" class="filter_details_group_link">Bags</a>
-                        <a href="#" class="filter_details_group_link">Denim</a>
-                        <a href="#" class="filter_details_group_link">Hoodies & Sweatshirts</a>
-                        <a href="#" class="filter_details_group_link">Jackets & Coats</a>
-                        <a href="#" class="filter_details_group_link">Polos</a>
-                        <a href="#" class="filter_details_group_link">Shirts</a>
-                        <a href="#" class="filter_details_group_link">Shoes</a>
-                        <a href="#" class="filter_details_group_link">Sweaters & Knits</a>
-                        <a href="#" class="filter_details_group_link">T-Shirts</a>
-                        <a href="#" class="filter_details_group_link">Tanks</a>
-                    </div>
-                </details>
-                <details class="filter_details_group">
-                    <summary class="filter_details_group_summary">
-                        designer
-                    </summary>
-                    <div class="filter_details_group_links">
-                        <a href="#" class="filter_details_group_link">Accessories</a>
-                        <a href="#" class="filter_details_group_link">Bags</a>
-                        <a href="#" class="filter_details_group_link">Denim</a>
-                        <a href="#" class="filter_details_group_link">Hoodies & Sweatshirts</a>
-                        <a href="#" class="filter_details_group_link">Jackets & Coats</a>
-                        <a href="#" class="filter_details_group_link">Polos</a>
-                        <a href="#" class="filter_details_group_link">Shirts</a>
-                        <a href="#" class="filter_details_group_link">Shoes</a>
-                        <a href="#" class="filter_details_group_link">Sweaters & Knits</a>
-                        <a href="#" class="filter_details_group_link">T-Shirts</a>
-                        <a href="#" class="filter_details_group_link">Tanks</a>
-                    </div>
-                </details>
-               
-            </div>
+        <div class="filter__border">
+            <details class="filter_details">
+                <summary class="filter_summary">
+                    <span class="filter_summary_heading">filter
+                    </span>
+                    <svg width="15.000000" height="10.000000" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <desc>
+                                Created with Pixso.
+                        </desc>
+                        <defs/>
+                        <path id="Vector" d="M0.833252 10L4.16675 10C4.625 10 5 9.625 5 9.16675C5 8.70825 4.625 8.33325 4.16675 8.33325L0.833252 8.33325C0.375 8.33325 0 8.70825 0 9.16675C0 9.625 0.375 10 0.833252 10ZM0 0.833252C0 1.29175 0.375 1.66675 0.833252 1.66675L14.1667 1.66675C14.625 1.66675 15 1.29175 15 0.833252C15 0.375 14.625 0 14.1667 0L0.833252 0C0.375 0 0 0.375 0 0.833252ZM0.833252 5.83325L9.16675 5.83325C9.625 5.83325 10 5.45825 10 5C10 4.54175 9.625 4.16675 9.16675 4.16675L0.833252 4.16675C0.375 4.16675 0 4.54175 0 5C0 5.45825 0.375 5.83325 0.833252 5.83325Z" fill="#000000" fill-opacity="1.000000" fill-rule="nonzero"/>
+                    </svg>
+                </summary>
+                <div class="filter_details_groups">
+                    <details class="filter_details_group" open>
+                        <summary class="filter_details_group_summary">
+                            category
+                        </summary>
+                        <div class="filter_details_group_links">
+                            <a href="#" class="filter_details_group_link">Accessories</a>
+                            <a href="#" class="filter_details_group_link">Bags</a>
+                            <a href="#" class="filter_details_group_link">Denim</a>
+                            <a href="#" class="filter_details_group_link">Hoodies & Sweatshirts</a>
+                            <a href="#" class="filter_details_group_link">Jackets & Coats</a>
+                            <a href="#" class="filter_details_group_link">Polos</a>
+                            <a href="#" class="filter_details_group_link">Shirts</a>
+                            <a href="#" class="filter_details_group_link">Shoes</a>
+                            <a href="#" class="filter_details_group_link">Sweaters & Knits</a>
+                            <a href="#" class="filter_details_group_link">T-Shirts</a>
+                            <a href="#" class="filter_details_group_link">Tanks</a>
+                        </div>
+                    </details>
+                    <details class="filter_details_group">
+                        <summary class="filter_details_group_summary">
+                            brand
+                        </summary>
+                        <div class="filter_details_group_links">
+                            <a href="#" class="filter_details_group_link">Accessories</a>
+                            <a href="#" class="filter_details_group_link">Bags</a>
+                            <a href="#" class="filter_details_group_link">Denim</a>
+                            <a href="#" class="filter_details_group_link">Hoodies & Sweatshirts</a>
+                            <a href="#" class="filter_details_group_link">Jackets & Coats</a>
+                            <a href="#" class="filter_details_group_link">Polos</a>
+                            <a href="#" class="filter_details_group_link">Shirts</a>
+                            <a href="#" class="filter_details_group_link">Shoes</a>
+                            <a href="#" class="filter_details_group_link">Sweaters & Knits</a>
+                            <a href="#" class="filter_details_group_link">T-Shirts</a>
+                            <a href="#" class="filter_details_group_link">Tanks</a>
+                        </div>
+                    </details>
+                    <details class="filter_details_group">
+                        <summary class="filter_details_group_summary">
+                            designer
+                        </summary>
+                        <div class="filter_details_group_links">
+                            <a href="#" class="filter_details_group_link">Accessories</a>
+                            <a href="#" class="filter_details_group_link">Bags</a>
+                            <a href="#" class="filter_details_group_link">Denim</a>
+                            <a href="#" class="filter_details_group_link">Hoodies & Sweatshirts</a>
+                            <a href="#" class="filter_details_group_link">Jackets & Coats</a>
+                            <a href="#" class="filter_details_group_link">Polos</a>
+                            <a href="#" class="filter_details_group_link">Shirts</a>
+                            <a href="#" class="filter_details_group_link">Shoes</a>
+                            <a href="#" class="filter_details_group_link">Sweaters & Knits</a>
+                            <a href="#" class="filter_details_group_link">T-Shirts</a>
+                            <a href="#" class="filter_details_group_link">Tanks</a>
+                        </div>
+                    </details>
+                
+                </div>
 
-        </details>
+            </details>
+        </div>
 
         <div class="filter_sort">
             <details class="filter_sort_group">
