--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
           <a href="./02_HTML_CSS/02_seminar/index.html" target="_blank">Семинар 2</a> (Возможности HTML5. элемент details)
         </li>
         <li class="nav_elem">
+          <a href="./02_HTML_CSS/03_lesson/index.html" target="_blank">Лекция 3</a> (Возможности CSS3, параллакс)
+        </li>
+        <li class="nav_elem">
           <a href="./02_HTML_CSS/03_seminar/index.html" target="_blank">Семинар 3</a> (Возможности CSS3)
         </li>
         <li class="nav_elem">
