--- a/02_HTML_CSS/03_lesson/index.html
+++ b/02_HTML_CSS/03_lesson/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <!-- Добавление теней к тексту тени -->
-    <!-- <div class="task_1">
+    <div class="task_1">
         <p class="box">Lorem ipsum dolor sit amet.</p>
         <p class="box-1">Lorem ipsum dolor sit amet.</p>
-    </div> -->
+    </div>
 
     <!-- Добавление Рамки в CSS3 -->
-    <!-- <div class="task_2">
+    <div class="task_2">
         <div class="box r5"></div>
         <div class="box-1"></div>
-    </div> -->
+    </div>
 
     <!-- Паралакс -->
     <div class="task_3">
