Добавляю файлы с лекции 6

--- a/02_HTML_CSS/06_lesson/index.html
+++ b/02_HTML_CSS/06_lesson/index.html
@@ -3,14 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Породия на Duck Hunt. HTML5 & CSS3</title>
+    <link rel="icon" href="./image/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <input type="checkbox" name="" id="" class="duck-check">
-    <input type="checkbox" name="" id="" class="duck-check">
-    <input type="checkbox" name="" id="" class="duck-check">
-
-    <h1 class="counter-info">0</h1>
+<body class="body">
+    <div class="duck duck_1">
+        <input type="checkbox" id="duck1" class="duck-check">
+        <label for="duck1">
+            <img src="./image/duck-fly.gif" alt="утка 1" class="duck__img">
+        </label>
+    </div>
+    <div class="duck duck_2">
+        <input type="checkbox" name="" id="duck2" class="duck-check">
+        <label for="duck2">
+            <img src="./image/duck-fly.gif" alt="утка 2" class="duck__img">
+        </label>
+    </div>
+    <div class="duck duck_3">
+        <input type="checkbox" name="" id="duck3" class="duck-check">
+        <label for="duck3">
+            <img src="./image/duck-fly.gif" alt="утка 3" class="duck__img">
+        </label>
+    </div>
+    <h1 class="counter-info"></h1>
 </body>
 </html>
