Подкорректировал файл навигации

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           библиотека)
         </li>
         <li class="nav_elem">
-          <a href="./01_HTML_CSS/04_DZ/index.html" target="_blank">ДЗ 4</a> (макет +
-          адаптив)
+          <a href="./01_HTML_CSS/04_DZ/index.html" target="_blank">ДЗ 4</a> <b>(макет +
+          адаптив)</b>
         </li>
         <li class="nav_elem">
           <a href="./01_HTML_CSS/06_DZ/index.html" target="_blank">ДЗ 6</a> (макет магазин)
@@ -39,7 +39,7 @@
         </li>
         <li class="nav_elem">
           <a href="./01_HTML_CSS/08_seminar/index.html" target="_blank">Семинар 8</a>
-          (форма)
+          <b>(форма)</b>
         </li>
         <li class="nav_elem">
           <a href="./01_HTML_CSS/09_seminar/index.html" target="_blank">Семинар 9</a>
@@ -59,7 +59,7 @@
           <a href="./02_HTML_CSS/01_seminar/index.html" target="_blank">Семинар 1</a> (Препроцессы)
         </li>
         <li class="nav_elem">
-          <a href="./02_HTML_CSS/01_DZ/index.html" target="_blank">ДЗ 1</a> (Препроцессы)
+          <a href="./02_HTML_CSS/01_DZ/index.html" target="_blank">ДЗ 1</a> <b>(Препроцессы. Макет магазин)</b>
         </li>
         <li class="nav_elem">
           <a href="./02_HTML_CSS/02_seminar/index.html" target="_blank">Семинар 2</a> (Возможности HTML5. элемент details)
@@ -72,6 +72,12 @@
         </li>
         <li class="nav_elem">
           <a href="./02_HTML_CSS/04_seminar/index.html" target="_blank">Семинар 4</a> (БЭМ и другие дополнения)
+        </li>
+        <li class="nav_elem">
+          <a href="./02_HTML_CSS/05_lesson/index.html" target="_blank">Лекция 5</a>
+        </li>
+        <li class="nav_elem">
+          <a href="./02_HTML_CSS/06_lesson/index.html" target="_blank">Лекция 6</a> <b>(Игра породия на Duck Hunt. HTML5 & CSS3)</b>
         </li>
       </ul>
     </div>
