доверстал игру с лекции 6

--- a/02_HTML_CSS/06_lesson/index.html
+++ b/02_HTML_CSS/06_lesson/index.html
@@ -26,6 +26,12 @@
             <img src="./image/duck-fly.gif" alt="утка 3" class="duck__img">
         </label>
     </div>
+    <div class="duck duck_4">
+        <input type="checkbox" name="" id="duck4" class="duck-check">
+        <label for="duck4">
+            <img src="./image/duck-fly.gif" alt="утка 4" class="duck__img">
+        </label>
+    </div>
     <h1 class="counter-info"></h1>
 </body>
 </html>
