Верстаю страницу ДЗ

--- a/02_HTML_CSS/01_DZ/index.html
+++ b/02_HTML_CSS/01_DZ/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="title_headers">
                         <div class="title_header">
-                            <h1 class="title-header center">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
+                            <h1 class="title-header center">THE&nbsp;BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
                         </div>
                     </div>
                 </div>
