доверстан страницу index для 768px

--- a/02_HTML_CSS/01_DZ/index.html
+++ b/02_HTML_CSS/01_DZ/index.html
@@ -104,65 +104,33 @@
             </div>
         </div>
         
-        <div class="offer center">
-            <div class="offer_content">
-                <div class="offer_cards_up">
-
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_1.jpeg" alt="women" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">30% OFF</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">FOR WOMEN</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_2.jpeg" alt="man" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">hot deal</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">FOR men</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_3.jpeg" alt="kids" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">NEW ARRIVALS</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">FOR KIDS</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+        <div class="sale center">
+            <div class="sale__item">
+                <img class="sale__img" src="./img/offer_card_1.jpeg" alt="sale image">
+                <div class="sale__content">
+                    <p class="sale__text">30% OFF</p>
+                    <h3 class="sale__heading">FOR WOMEN</h3>
                 </div>
-                <div class="offer_cards_down">
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_down.jpeg" alt="accesories" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">luxirous & trendy</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">accesories</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            </div>
+            <div class="sale__item">
+                <img class="sale__img" src="./img/offer_card_2.jpeg" alt="sale image">
+                <div class="sale__content">
+                    <p class="sale__text">HOT DEAL</p>
+                    <h3 class="sale__heading">FOR MEN</h3>
+                </div>
+            </div>
+            <div class="sale__item">
+                <img class="sale__img" src="./img/offer_card_3.jpeg" alt="sale image">
+                <div class="sale__content">
+                    <p class="sale__text">NEW ARRIVALS</p>
+                    <h3 class="sale__heading">FOR kids</h3>
+                </div>
+            </div>
+            <div class="sale__item sale__item_big">
+                <img class="sale__img" src="./img/offer_card_down.jpeg" alt="sale image">
+                <div class="sale__content">
+                    <p class="sale__text">LUXIROUS & TRENDY</p>
+                    <h3 class="sale__heading">ACCESORIES</h3>
                 </div>
             </div>
         </div>
