Доверстал стили для страницы product в разрешении 768px

--- a/02_HTML_CSS/01_DZ/product.html
+++ b/02_HTML_CSS/01_DZ/product.html
@@ -141,7 +141,7 @@
         </div>
       </div>
 
-      <div class="page_product_title_product_description center">
+      <div class="page_product_title_product_description">
         <div class="page_product_title_product_description_outer_frame">
           <p class="page_product_title_product_description_name">
             WOMEN COLLECTION
