Вынес стили в отдельный каталог. Доверстал страницу для разрешения 768 и 1024 px

--- a/02_HTML_CSS/01_DZ/card.html
+++ b/02_HTML_CSS/01_DZ/card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shoping cart</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -256,7 +256,7 @@
             <p class="checkout__sub">SUB TOTAL         $900</p>
             <p class="checkout__grand">GRAND TOTAL      <span class="checkout__grand_span">$900</span></p>
             <div class="checkout__hr"></div>
-            <button class="checkout__button" type="submit">PROCEED TO CHECKOUT</button>
+            <button class="checkout__button" type="submit">PROCEED&nbsp;TO&nbsp;CHECKOUT</button>
           </div>
       </div>
       
