--- a/02_HTML_CSS/01_DZ/catalog.html
+++ b/02_HTML_CSS/01_DZ/catalog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper-page@11/swiper-page-bundle.min.css" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -319,7 +319,7 @@
                         <p class="products_card_down_price">$52.00</p>
                     </div>
                 </div>
-                <div class="products_card">
+                <div class="products_card products__hide">
                     <div class="products_card_img">
                         <img src="./img/products_card_3.jpeg" alt="card_3" class="products_card-img">
                         <a href="./product.html" class="products_card_img-button">
