--- a/02_HTML_CSS/01_DZ/product.html
+++ b/02_HTML_CSS/01_DZ/product.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -383,7 +383,7 @@
             <p class="products_card_down_price">$52.00</p>
           </div>
         </div>
-        <div class="products_card">
+        <div class="products_card products__hide">
           <div class="products_card_img">
             <img
               src="./img/page_product_3.jpeg"
