--- a/02_HTML_CSS/01_DZ/registration.html
+++ b/02_HTML_CSS/01_DZ/registration.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -173,10 +173,10 @@
         <p class="registration__text">Get in&nbsp;on&nbsp;the loyalty program where you can earn points and unlock serious perks. Starting with these as&nbsp;soon as&nbsp;you join:</p>
         <ul class="registration__ul">
           <li class="registration__perks">15% off welcome offer</li>
-          <li class="registration__perks">Free shipping, returns and exchanges on all orders</li>
-          <li class="registration__perks">$10 off a purchase on your birthday</li>
-          <li class="registration__perks">Early access to products</li>
-          <li class="registration__perks">Exclusive offers & rewards</li>
+          <li class="registration__perks">Free shipping, returns and exchanges on&nbsp;all orders</li>
+          <li class="registration__perks">$10 off a&nbsp;purchase on&nbsp;your birthday</li>
+          <li class="registration__perks">Early access to&nbsp;products</li>
+          <li class="registration__perks">Exclusive offers &amp;&nbsp;rewards</li>
         </ul>
       </div>
     </div>
