сверстал версию сайта для разрешения 375 и 425 px

--- a/02_HTML_CSS/01_DZ/registration.html
+++ b/02_HTML_CSS/01_DZ/registration.html
@@ -56,6 +56,8 @@
               </svg>
               <input type="checkbox" id="burger" checked />
               <nav class="burger_nav">
+                <a href="./registration.html" class="burger_nav__registration nav_header">registration</a>
+                <a href="./card.html" class="burger_nav__card nav_header">card</a>
                 <p class="nav_header">menu</p>
                 <details class="nav_group" open>
                   <summary class="nav_group_name">man</summary>
@@ -90,7 +92,7 @@
               </nav>
             </label>
           </div>
-          <a href="./registration.html">
+          <a class="header_nav_registration" href="./registration.html">
             <svg
               width="29.000000"
               height="29.000000"
@@ -109,7 +111,7 @@
               />
             </svg>
           </a>
-          <a href="./card.html">
+          <a class="header_nav_card" href="./card.html">
             <svg
               width="31.995575"
               height="29.000000"
@@ -133,7 +135,7 @@
       </div>
     </header>
 
-    <div class="page_product_top center">
+    <div class="page_product_top center individual-pages">
       <div class="page_product_top_left"><a href="#">Registration</a></div>
     </div>
 
