--- a/02_HTML_CSS/01_DZ/index.html
+++ b/02_HTML_CSS/01_DZ/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <script src="./scripts/scripts.js" defer></script>
+    <script src="./scripts/catalog_data.js"></script>
   </head>
   <body>
     <header class="header">
@@ -218,7 +220,27 @@
           </p>
         </div>
         <div class="products_elements">
-          <div class="products_card">
+
+          <template id="cardTemplate">
+            <div class="products_card">
+              <div class="products_card_img">
+                <img src="" alt="" class="products_card-img" />
+                <a href="" class="products_card_img-button">
+                  <p class="products_card_img-button-text">
+                    Add&nbsp;to&nbsp;Cart
+                  </p>
+                </a>
+              </div>
+
+              <div class="products_card_down">
+                <p class="products_card_down_header"></p>
+                <p class="products_card_down_text"></p>
+                <p class="products_card_down_price"></p>
+              </div>
+            </div>
+          </template>
+
+          <!-- <div class="products_card">
             <div class="products_card_img">
               <img
                 src="./img/products_card_1.jpeg"
@@ -356,7 +378,7 @@
               </p>
               <p class="products_card_down_price">$52.00</p>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="products_button">
           <a href="./catalog.html" class="products_button_link"
