--- a/02_HTML_CSS/01_DZ/product.html
+++ b/02_HTML_CSS/01_DZ/product.html
@@ -16,6 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <script src="./scripts/scripts.js" defer></script>
+    <script src="./scripts/catalog_data.js"></script>
   </head>
   <body>
     <header class="header">
@@ -307,10 +309,28 @@
         </div>
       </div>
     </div>
-
     <div class="page_product_additional_cards center">
       <div class="products_elements">
-        <div class="products_card">
+        <template id="cardTemplateProductPage">
+          <div class="products_card">
+            <div class="products_card_img">
+              <img src="" alt="" class="products_card-img" />
+              <a href="" class="products_card_img-button">
+                <p class="products_card_img-button-text">
+                  Add&nbsp;to&nbsp;Cart
+                </p>
+              </a>
+            </div>
+
+            <div class="products_card_down">
+              <p class="products_card_down_header"></p>
+              <p class="products_card_down_text"></p>
+              <p class="products_card_down_price"></p>
+            </div>
+          </div>
+        </template>
+
+        <!-- <div class="products_card">
           <div class="products_card_img">
             <img
               src="./img/page_product_1.jpeg"
@@ -373,7 +393,7 @@
             </p>
             <p class="products_card_down_price">$52.00</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
