децентрализировал вызов функции по id в разные файлы, привязал каждый файл script к своему html. весь сайт теперь работает корректно

--- a/02_HTML_CSS/01_DZ/index.html
+++ b/02_HTML_CSS/01_DZ/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <script src="./scripts/scripts.js" defer></script>
+    <script src="./scripts/script_index.js" defer></script>
     <script src="./scripts/catalog_data.js"></script>
   </head>
   <body>
