--- a/02_HTML_CSS/01_DZ/catalog.html
+++ b/02_HTML_CSS/01_DZ/catalog.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <script src="./scripts/scripts.js" defer></script>
+    <script src="./scripts/script_catalog.js" defer></script>
     <script src="./scripts/catalog_data.js"></script>
 </head>
 <body>
@@ -272,7 +273,7 @@
     </div>
 
     <div class="products center">
-        <div class="products_elements">
+        <div class="products_elements" id="allProducts">
         </div> 
         <div class="swiper-page">
             <div class="swiper-page__navigate">
