--- a/02_HTML_CSS/01_DZ/product.html
+++ b/02_HTML_CSS/01_DZ/product.html
@@ -17,7 +17,9 @@
       rel="stylesheet"
     />
     <script src="./scripts/scripts.js" defer></script>
+    <script src="./scripts/script_product.js" defer></script>
     <script src="./scripts/catalog_data.js"></script>
+    
   </head>
   <body>
     <header class="header">
