--- a/02_HTML_CSS/01_DZ/index.html
+++ b/02_HTML_CSS/01_DZ/index.html
@@ -14,6 +14,7 @@
     />
     <script src="./scripts/scripts.js" defer></script>
     <script src="./scripts/script_index.js" defer></script>
+    <script src="./scripts/script_basket.js" defer></script>
     <script src="./scripts/catalog_data.js"></script>
   </head>
   <body>
@@ -241,145 +242,6 @@
             </div>
           </template>
 
-          <!-- <div class="products_card">
-            <div class="products_card_img">
-              <img
-                src="./img/products_card_1.jpeg"
-                alt="card_1"
-                class="products_card-img"
-              />
-              <a href="./product.html" class="products_card_img-button">
-                <p class="products_card_img-button-text">
-                  Add&nbsp;to&nbsp;Cart
-                </p>
-              </a>
-            </div>
-
-            <div class="products_card_down">
-              <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
-              <p class="products_card_down_text">
-                Known for her sculptural takes on&nbsp;traditional tailoring,
-                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with
-                Moda Operandi.
-              </p>
-              <p class="products_card_down_price">$52.00</p>
-            </div>
-          </div>
-          <div class="products_card">
-            <div class="products_card_img">
-              <img
-                src="./img/products_card_2.jpeg"
-                alt="card_2"
-                class="products_card-img"
-              />
-              <a href="./product.html" class="products_card_img-button">
-                <p class="products_card_img-button-text">
-                  Add&nbsp;to&nbsp;Cart
-                </p>
-              </a>
-            </div>
-            <div class="products_card_down">
-              <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
-              <p class="products_card_down_text">
-                Known for her sculptural takes on&nbsp;traditional tailoring,
-                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with
-                Moda Operandi.
-              </p>
-              <p class="products_card_down_price">$52.00</p>
-            </div>
-          </div>
-          <div class="products_card">
-            <div class="products_card_img">
-              <img
-                src="./img/products_card_3.jpeg"
-                alt="card_3"
-                class="products_card-img"
-              />
-              <a href="./product.html" class="products_card_img-button">
-                <p class="products_card_img-button-text">
-                  Add&nbsp;to&nbsp;Cart
-                </p>
-              </a>
-            </div>
-            <div class="products_card_down">
-              <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
-              <p class="products_card_down_text">
-                Known for her sculptural takes on&nbsp;traditional tailoring,
-                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with
-                Moda Operandi.
-              </p>
-              <p class="products_card_down_price">$52.00</p>
-            </div>
-          </div>
-          <div class="products_card">
-            <div class="products_card_img">
-              <img
-                src="./img/products_card_4.jpeg"
-                alt="card_4"
-                class="products_card-img"
-              />
-              <a href="./product.html" class="products_card_img-button">
-                <p class="products_card_img-button-text">
-                  Add&nbsp;to&nbsp;Cart
-                </p>
-              </a>
-            </div>
-            <div class="products_card_down">
-              <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
-              <p class="products_card_down_text">
-                Known for her sculptural takes on&nbsp;traditional tailoring,
-                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with
-                Moda Operandi.
-              </p>
-              <p class="products_card_down_price">$52.00</p>
-            </div>
-          </div>
-          <div class="products_card">
-            <div class="products_card_img">
-              <img
-                src="./img/products_card_5.jpeg"
-                alt="card_5"
-                class="products_card-img"
-              />
-              <a href="./product.html" class="products_card_img-button">
-                <p class="products_card_img-button-text">
-                  Add&nbsp;to&nbsp;Cart
-                </p>
-              </a>
-            </div>
-            <div class="products_card_down">
-              <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
-              <p class="products_card_down_text">
-                Known for her sculptural takes on&nbsp;traditional tailoring,
-                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with
-                Moda Operandi.
-              </p>
-              <p class="products_card_down_price">$52.00</p>
-            </div>
-          </div>
-          <div class="products_card">
-            <div class="products_card_img">
-              <img
-                src="./img/products_card_6.jpeg"
-                alt="card_6"
-                class="products_card-img"
-              />
-              <a href="./product.html" class="products_card_img-button">
-                <p class="products_card_img-button-text">
-                  Add&nbsp;to&nbsp;Cart
-                </p>
-              </a>
-            </div>
-            <div class="products_card_down">
-              <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
-              <p class="products_card_down_text">
-                Known for her sculptural takes on&nbsp;traditional tailoring,
-                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with
-                Moda Operandi.
-              </p>
-              <p class="products_card_down_price">$52.00</p>
-            </div>
-          </div> -->
         </div>
         <div class="products_button">
           <a href="./catalog.html" class="products_button_link"
