отредактировал файт index.html

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
           <a href="./02_HTML_CSS/06_lesson/index.html" target="_blank">Лекция 6</a> <b>(Игра породия на Duck Hunt. HTML5 & CSS3)</b>
         </li>
       </ul>
+      <ul class="navigate_plus">
+        <h3>Самостоятельная практика вёрстки</h3>
+        <li class="nav_elem">
+          <a href="./practice/maket_clock/index.html" target="_blank">Магазин часов</a> (без адаптива) <a href="https://www.figma.com/file/crzmL1ngLJBYethCxleSUI/Лендинг-часы?type=design&node-id=1-15&mode=design&t=LJT4fDeKVPSMEiEk-0" target="_blank">(Ссылка на макет)</a>
+        </li>
     </div>
   </body>
 </html>
